--- a/config.html
+++ b/config.html
@@ -5,7 +5,7 @@
         $config->recaptcha = false;
     }
 
-	if (!isset($config->authtoken)) {
+    if (!isset($config->authtoken)) {
         $config->authtoken = false;
     }
 
@@ -37,7 +37,7 @@
 </tr>
 <?php
 
-print_auth_lock_options($this->authtype, $user_fields, get_string('auth_fieldlocks_help', 'auth'), false, false);
+print_auth_lock_options($this->authtype, $userfields, get_string('auth_fieldlocks_help', 'auth'), false, false);
 
 ?>
 </table>
